Tests/testsuite/positive/entry_act1.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;
using System.Console;
using System.Diagnostics;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  flags testing;

   name "entry actions sequence";
  
   state A
   {
     entry / act1, act2;
   }
   
   #>)]
  public class example
  { 
  }



module Test
{
  Main() : void
  {
   def fsm = example();
   def tester = fsm.GetTester();
   tester.ConsoleTestInit();
   tester.Initiate("A", "act1", "act2", "EntryA");
   fsm.Terminate();
  }
}

/*
BEGIN-OUTPUT
act1
act2
EntryA
[A]
Ok
END-OUTPUT
*/
