Tests/testsuite/negative/name_cannot_be_specified_twice.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#

  name "name cannot be specified more than once";
  
  name abc; // E: Parse Error: Name cannot be specified more than once
  #>)]
  public class example
  {
  }


